Fix language section alignment

--- a/style.css
+++ b/style.css
@@ -381,7 +381,6 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 12px;
   width: 114px;
   height: 48px;
   flex: none;
